--- a/Location/app/src/main/res/layout/activity_main.xml
+++ b/Location/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.dahuatech.android.location.MainActivity">
+    android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn_point"
-        android:text="暂停定位"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <com.amap.api.maps2d.MapView
-        android:id="@+id/amap"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btn_point"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="暂停定位" />
+
+        <RadioGroup
+            android:id="@+id/radioGroup_locMode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/radio_Battery_Saving"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="省电" />
+
+            <RadioButton
+                android:id="@+id/radio_Device_Sensors"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="设备" />
+
+            <RadioButton
+                android:id="@+id/radio_Hight_Accuracy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="高精度" />
+
+        </RadioGroup>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textColor="#000000"
+        android:textSize="16sp" />
 
 </LinearLayout>
